--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Django>=3.2,<3.3
 djangorestframework>=3.12.4,<=3.13
 flake8>=3.9.2,<3.10
-psycopg2>=2.8.6,<2.9
+psycopg2-binary>=2.8.6,<2.9
 drf-yasg>=1.20
