--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     app:
         build:
             context: .
+            dockerfile: Dockerfile-dev
         ports:
             - "8000:8000"
         volumes:
