--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ djangorestframework>=3.12.4,<=3.13
 flake8>=3.9.2,<3.10
 psycopg2-binary>=2.8.6,<2.9
 drf-yasg>=1.20
+gunicorn>=20.1,<20.2.0
+whitenoise>=5.2.0,<5.3.0
+dj-database-url>=0.5.0,<=1.0.0
