--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -7,5 +7,5 @@ jobs:
             - uses: actions/checkout@v2
             - name: Run Tests
               run: |
-                  docker-compose run --rm app sh -c "sudo python manage.py collectstatic --noinput"
+                  docker-compose run --rm app sh -c "python manage.py collectstatic --noinput"
                   docker-compose run --rm app sh -c "python manage.py wait_for_db && python manage.py test -b && flake8"
